Added TOC, Session and cookies. Removed GetEnv() since it only works on JDK 1.5
git-svn-id: svn://svn.code.sf.net/p/twiff/svn/trunk@137 7fd766b7-3c10-0410-8314-fc2af2d07f57

--- a/src/webapp/index.html
+++ b/src/webapp/index.html
@@ -17,6 +17,8 @@
 <li><a href="db.jsp">DB</a></li>
 
 <li><a href="ejb.jsp">EJB</a></li>
+
+<li><a href="env.jsp">Environment dump</a></li>
 </ul>
 </body>
 </html>
